Add repository to package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "moduleserve": "./index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marijnh/moduleserve.git"
+  },
   "keywords": [
     "commonjs",
     "module",
