--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "author": "Marijn Haverbeke <marijnh@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "ecstatic": "^4.1.2"
+    "serve-static": "^1.14.1"
   }
 }
