--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Marijn Haverbeke <marijnh@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "send": "^0.17.1",
     "serve-static": "^1.14.1"
   }
 }
